mise en place de la musique du jeu

--- a/src/platformerProject/src/View/.gitignore
+++ b/src/platformerProject/src/View/.gitignore
@@ -8,3 +8,7 @@
 /MenuFrame$EventExit.class
 /MenuFrame.class
 /MenuPanel.class
+/OptionsFrame.class
+/MenuFrame$EventOptions.class
+/OptionsFrame$EventOff.class
+/OptionsFrame$EventOn.class
